--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,4 +34,5 @@ dependencies {
     implementation "com.google.android.gms:play-services-location:16.0.0"
     implementation "com.android.support:support-compat:28.0.0"
 
+    implementation 'com.android.support:design:28.0.0'
 }
